Modify to release, fix bug

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
-    <string name="app_name">Nocturne</string>
-    <string name="main_name">Nocturne</string>
-    <string name="message_moonage">月齢: %1$d</string>
+    <string name="app_name" translatable="false">Nocturne</string>
+    <string name="face_name" translatable="false">Nocturne</string>
+    <string name="message_moonage">Moon age: %1$d</string>
+    <string name="day_mon">Mon</string>
+    <string name="day_tue">Tue</string>
+    <string name="day_wed">Wed</string>
+    <string name="day_thu">Thu</string>
+    <string name="day_fri">Fri</string>
+    <string name="day_sat">Sat</string>
+    <string name="day_sun">Sun</string>
 </resources>
