--- a/wear/src/main/res/values-ja-rJP/strings.xml
+++ b/wear/src/main/res/values-ja-rJP/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="message_moonage">月齢: %1$d</string>
+    <string name="message_moonage">月齢: %1$.2f</string>
     <string name="day_mon">月</string>
     <string name="day_tue">火</string>
     <string name="day_wed">水</string>
