--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name" translatable="false">Nocturne</string>
     <string name="face_name" translatable="false">Nocturne</string>
     <string name="message_moonage">Moon age: %1$.2f</string>
-    <string name="day_mon">Mon</string>
-    <string name="day_tue">Tue</string>
-    <string name="day_wed">Wed</string>
-    <string name="day_thu">Thu</string>
-    <string name="day_fri">Fri</string>
-    <string name="day_sat">Sat</string>
-    <string name="day_sun">Sun</string>
+    <string name="day_mon" translatable="false">Mon</string>
+    <string name="day_tue" translatable="false">Tue</string>
+    <string name="day_wed" translatable="false">Wed</string>
+    <string name="day_thu" translatable="false">Thu</string>
+    <string name="day_fri" translatable="false">Fri</string>
+    <string name="day_sat" translatable="false">Sat</string>
+    <string name="day_sun" translatable="false">Sun</string>
 </resources>
